rds.tf
resource "aws_db_instance" "mysql" {
  identifier         = "product-db"
  engine             = "mysql"
  engine_version     = "8.0"
  instance_class     = "db.t3.micro"
  allocated_storage  = 20
  username           = "admin"
  password           = "admin*123"
  db_name            = "ProductDb"
  publicly_accessible = false
  skip_final_snapshot = true
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name   = aws_db_subnet_group.subnet_group.name
}

resource "aws_db_subnet_group" "subnet_group" {
  name       = "rds-subnet-group-private"
  subnet_ids = [aws_subnet.private.id]

  tags = {
    Name = "RDS subnet group"
  }
}
